Chore: fix search overflowing view on mobile
fixes #1413

--- a/assets/sass/navbar.sass
+++ b/assets/sass/navbar.sass
@@ -32,7 +32,7 @@
   background-color: #E8F0F8
   border: 1px solid #CCC
   max-width: 600px
-  min-width: 500px
+  min-width: 250px
   min-height: auto
   height: auto
   max-height: 500px
